# bitacora

./: .npmrc  LICENSE  README.md  SYSTEM_DEPS.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: jira.rs  mod.rs  reports.rs  settings.rs  tasks.rs  timer.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_create_tables.sql
src-tauri/src/jira/: client.rs  models.rs
src-tauri/src/timer/: mod.rs
src/components/Jira/: JiraPending.tsx  JiraSync.tsx
src/components/Layout/: Sidebar.tsx
src/components/Reports/: DailyView.tsx  WeeklyView.tsx
src/components/Settings/: SettingsForm.tsx
src/components/Tasks/: TaskForm.tsx  TaskItem.tsx  TaskList.tsx
src/components/Timer/: TimerControls.tsx  TimerDisplay.tsx
src/hooks/: useJiraSync.ts  useReports.ts  useTasks.ts  useTimer.ts
src/lib/: format.ts  tauri.ts
src/types/: index.ts
